# MilliQan-Experiment-PCCS

./: .gitignore  Pulse_test.py  README.md  Reciever.py  generate CSV.py  lightbar.py  main.py  rpi5.py  spi.py
Setup/: spi-cs-extend.dts
Source/: CMakeLists.txt  LV_Dist_Spi.uf2  LV_Import.py  PCCS_Control.py  PCCS_Receiver.py  PCCS_Sender.py  RPi5.py  main.c  main.py  rpi5.py
Source/CSV_Examples/: PCCS_3500_counts_flashing_test.csv  PCCS_3600_counts_flashing_test.csv  PCCS_3700_10kevents_counts_flashing_test.csv  PCCS_3700_counts_flashing_test.csv  PCCS_flashing_sweep_test.csv  PCCS_flashing_test.csv  PCCS_no_voltage_DAQ_triggering_test.csv  PCCS_triggering_sweep_test.csv  Pulse_confirmation_test.csv  Pulse_length_test_2.csv  Pulse_one_by_one_test.csv  Pulse_stress_test.csv  Pulse_swirl_test.csv  Pulse_voltage_test.csv  Test_CSV.csv
Source/Pico/: CMakeLists.txt  LV_Dist_Spi.uf2  main.c
